--- a/metroque/assets/css/style.css.css
+++ b/metroque/assets/css/style.css.css
@@ -308,7 +308,8 @@ HEADER
     border-radius: 21px;
     background-color: transparent;
     border: transparent;
-    margin-left: 40px;
+  
+    color: #fff;
  
 
 }
@@ -331,9 +332,11 @@ HEADER
 	border-top-color: rgba(255,255,255,0.5);
 	border-bottom-color: rgba(255,255,255,0.5);
 	transform: scale(0.1, 1);
+  
 }
 .cont .btn:hover span {
 	letter-spacing: 2px;
+  background-color: transparent;
 }
 .cont .btn:hover::before {
 	opacity: 1;	
@@ -349,6 +352,7 @@ HEADER
 	z-index: 1;
 	transition: all 0.3s;
 	background-color: rgba(255,255,255,0.1);
+  
 }
 .cont .btn:hover::after {
 	opacity: 0;	
@@ -357,6 +361,111 @@ HEADER
 
 
 
+
+
+
+
+@media (max-width: 1200px) {
+ 
+.cont .btn::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	opacity: 0;
+	transition: all 0.3s;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-top-color: rgba(255,255,255,0.5);
+	border-bottom-color: rgba(255,255,255,0.5);
+	transform: scale(0.1, 1);
+  margin-top: 30px;
+  
+}
+.cont .btn:hover span {
+	letter-spacing: 2px;
+  background-color: transparent;
+}
+.cont .btn:hover::before {
+	opacity: 1;	
+	transform: scale(1, 1);	
+}
+.cont .btn::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	transition: all 0.3s;
+	background-color: rgba(255,255,255,0.1);
+  
+}
+.cont .btn:hover::after {
+	opacity: 0;	
+	transform: scale(0.1, 1);
+}
+
+
+
+}
+
+@media (max-width: 767px) {
+
+
+  .cont .btn::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-top-color: rgba(255,255,255,0.5);
+    border-bottom-color: rgba(255,255,255,0.5);
+    transform: scale(0.1, 1);
+   
+    
+  }
+  .cont .btn:hover span {
+    letter-spacing: 2px;
+    background-color: transparent;
+  }
+  .cont .btn:hover::before {
+    opacity: 1;	
+    transform: scale(1, 1);	
+  }
+  .cont .btn::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+    
+  }
+  .cont .btn:hover::after {
+    opacity: 0;	
+    transform: scale(0.1, 1);
+  }
+  
+  
+}
 
 
 
