--- a/metroque/portifoli_juliana-master/portifoli_juliana-master/styles/styles.css
+++ b/metroque/portifoli_juliana-master/portifoli_juliana-master/styles/styles.css
@@ -645,6 +645,7 @@ section {
 }
 .main-btn .btn-text {
   padding: 0 2rem;
+  display: flex;
 }
 .main-btn .btn-icon {
   background-color: var(--color-secondary);
